--- a/style.css
+++ b/style.css
@@ -6,15 +6,17 @@
   --main: whitesmoke;
   --background: #bfcecc;
   --refresh: black;
+  --text: black;
 }
 
 [data-theme="dark"] {
   --user-primary: #2d4870;
   --computer-primary: #8a1f11;
-  --neutral: rgb(54, 58, 55);
+  --neutral: rgb(124, 121, 80);
   --main: rgb(15, 15, 15);
-  --background: #3a3a3a;
+  --background: #292929;
   --refresh: rgb(112, 109, 109);
+  --text: rgb(121, 121, 121);
 }
 
 *,
@@ -27,10 +29,14 @@
 
 body {
   background: var(--background);
+  min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: "Noto Sans", sans-serif;
+  color: var(--text);
+  overflow: hidden;
 }
 
 h2 {
@@ -48,12 +54,18 @@ h2 {
   border-radius: 7px;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .score {
   font-size: 1.3rem;
   text-align: center;
   font-weight: 600;
+}
+
+#playerScore,
+#computerScore {
+  color: red;
 }
 .icons {
   display: flex;
@@ -92,6 +104,7 @@ h2 {
 
 .theme {
   position: absolute;
+  z-index: 100;
   left: 45%;
   top: 1%;
   width: auto;
@@ -103,7 +116,7 @@ h2 {
   text-align: center;
 }
 
-.theme .fas {
+.theme i {
   font-size: 1.5rem;
   color: black;
 }
@@ -119,4 +132,19 @@ h2 {
   align-items: center;
   gap: 5px;
   background-color: var(--neutral);
+}
+#computer_winner,
+#player_winner {
+  color: green;
+}
+#playerChoice,
+#computerChoice {
+  font-size: 1rem;
+  font-weight: 200;
+}
+
+@media screen and (max-width: 650px) {
+  h2 {
+    font-size: 1.5rem;
+  }
 }
